--- a/Keyhanatr/Keyhanatr.csproj
+++ b/Keyhanatr/Keyhanatr.csproj
@@ -19,5 +19,11 @@
     <ProjectReference Include="..\Keyhanatr.Core\Keyhanatr.Core.csproj" />
     <ProjectReference Include="..\Keyhanatr.Data\Keyhanatr.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\UserPanel\Data\" />
+    <Folder Include="Areas\UserPanel\Models\" />
+  </ItemGroup>
 
 </Project>
