add migrations and appSettings.json

--- a/Keyhanatr/appsettings.json
+++ b/Keyhanatr/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Keyhanatr": "Data Source=.;Initial Catalog=KeyhanatrDB;Integrated Security=True"
+    "Keyhanatr": "Data Source=LAPTOP-BH6N49AQ\\NEWSQLSERVER;Initial Catalog=KeyhanatrDB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
