--- a/Keyhanatr.Core/Keyhanatr.Core.csproj
+++ b/Keyhanatr.Core/Keyhanatr.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Keyhanatr.Data\Keyhanatr.Data.csproj" />
+  </ItemGroup>
+
 </Project>
