--- a/Keyhanatr/Keyhanatr.csproj
+++ b/Keyhanatr/Keyhanatr.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="kavenegar" Version="1.2.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
 		  <PrivateAssets>all</PrivateAssets>
@@ -15,6 +16,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Core" Version="5.0.2" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
 	</ItemGroup>
   <ItemGroup>
