--- a/Keyhanatr/Keyhanatr.csproj
+++ b/Keyhanatr/Keyhanatr.csproj
@@ -28,6 +28,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\UserPanel\Data\" />
     <Folder Include="Areas\UserPanel\Models\" />
+    <Folder Include="wwwroot\SliderImages\" />
   </ItemGroup>
 
 </Project>
