--- a/Keyhanatr/appsettings.Development.json
+++ b/Keyhanatr/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "Keyhanatr": "Data Source=.;Initial Catalog=KeyhanatrDB;Integrated Security=True"
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
